--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="text-align: center; margin-top: 50px;">
   <a href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_Oqg4Hi1JedoB9uOjCi05IsK821dR1MLbow&s" alt="Klicka på bilden" style="max-width: 90%; height: auto;">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_Oqg4Hi1JedoB9uOjCi05IsK821dR1MLbow&s" alt="Klicka på bilden" style="width: 100vw; height: auto; display: block; margin: 0 auto;">
   </a>
 </body>
 </html>
