--- a/index.html
+++ b/index.html
@@ -3,10 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <title>Min Bild</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+
+    .container {
+      position: relative;
+      width: 100%;
+      height: 100vh;
+      background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_Oqg4Hi1JedoB9uOjCi05IsK821dR1MLbow&s");
+      background-size: cover;
+      background-position: center;
+    }
+
+    .link-text {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 10%;
+      font-family: "Times New Roman", serif;
+      font-size: 24px;
+      color: white;
+      text-decoration: underline;
+      background-color: transparent;
+      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6); /* ← Här är skuggan */
+    }
+  </style>
 </head>
-<body style="text-align: center; margin-top: 50px;">
-  <a href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_Oqg4Hi1JedoB9uOjCi05IsK821dR1MLbow&s" alt="Klicka på bilden" style="width: 100vw; height: auto; display: block; margin: 0 auto;">
-  </a>
+<body>
+  <div class="container">
+    <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
+      Hjälp mig ⭢
+    </a>
+  </div>
 </body>
 </html>
