--- a/index.html
+++ b/index.html
@@ -19,20 +19,19 @@
       background-position: center;
     }
 
-  .link-text {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 10%;
-  font-family: "Times New Roman", serif;
-  font-size: 32px; /* ← STÖRRE TEXT */
-  color: white;
-  background-color: transparent;
-  text-decoration: none; /* ← ta bort vanlig understrykning */
-  border-bottom: 1px solid white; /* ← tunn linje som "egen understrykning" */
-  padding-bottom: 4px;
-  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
-}
+    .link-text {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 10%;
+      font-family: "Times New Roman", serif;
+      font-size: 64px; /* dubbelt så stor text */
+      color: white;
+      background-color: transparent;
+      text-decoration: underline; /* lägg till understrykning */
+      padding-bottom: 4px;
+      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
+    }
   </style>
 </head>
 <body>
