--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       transform: translateX(-50%);
       bottom: 10%;
       font-family: "Times New Roman", serif;
-      font-size: 64px; /* dubbelt så stor text */
+      font-size: 64px; 
       color: white;
       background-color: transparent;
-      text-decoration: underline; /* lägg till understrykning */
+      text-decoration: underline; 
       padding-bottom: 4px;
       text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
     }
