--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       height: 100vh;
       background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_Oqg4Hi1JedoB9uOjCi05IsK821dR1MLbow&s");
       background-size: cover;
+      text-decoration: none;
       background-position: center;
     }
 
