--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
 <head>
   <meta charset="UTF-8">
   <title>Min Bild</title>
@@ -8,24 +8,45 @@
       margin: 0;
       padding: 0;
       height: 100%;
+      background-color: black;
     }
 
     .container {
       position: relative;
       width: 100%;
       height: 100vh;
-      background-image: url("C80EB768-9B10-4FA8-A5B8-98AB7EAAAAC6.jpeg"); /* använd din uppladdade bild */
-      background-size: contain; /* visa hela bilden */
-      background-repeat: no-repeat;
-      background-position: center;
-      background-color: black; /* fyller ut runt bilden */
+      overflow: hidden;
     }
 
-    .overlay {
+    .background-image {
       position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: radial-gradient(ellipse at center, rgba(0,0,0,0) 60%, rgba(0,0,0,0.7) 100%);
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      height: auto;
+      max-height: none;
+      display: block;
+    }
+
+    .fade-top,
+    .fade-bottom {
+      position: absolute;
+      left: 0;
+      right: 0;
+      height: 15%;
       pointer-events: none;
+      z-index: 1;
+    }
+
+    .fade-top {
+      top: 0;
+      background: linear-gradient(to bottom, black, transparent);
+    }
+
+    .fade-bottom {
+      bottom: 0;
+      background: linear-gradient(to top, black, transparent);
     }
 
     .link-text {
@@ -33,19 +54,20 @@
       left: 50%;
       transform: translateX(-50%);
       bottom: 10%;
+      z-index: 2;
       font-family: "Times New Roman", serif;
       font-size: 38px;
       color: white;
-      background-color: transparent;
-      padding-bottom: 4px;
-      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
       text-decoration: none;
+      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="overlay"></div> <!-- Fade-effekt -->
+    <img class="background-image" src="C80EB768-9B10-4FA8-A5B8-98AB7EAAAAC6.jpeg" alt="Munbild">
+    <div class="fade-top"></div>
+    <div class="fade-bottom"></div>
     <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
       Hjälp mig ⭢
     </a>
