--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="container">
-    <img class="background-image" src="C80EB768-9B10-4FA8-A5B8-98AB7EAAAAC6.jpeg" alt="Munbild">
+    <img class="background-image" src="dålig munhälsa.jpeg" alt="Munbild"> <!-- <--- byt filnamnet om det är annorlunda -->
     <div class="fade-top"></div>
     <div class="fade-bottom"></div>
     <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
