--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
-  <title>Munbild</title>
+  <title>Munhälsa</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
       background-color: black;
+      height: 100%;
+      overflow: hidden;
     }
 
     .container {
@@ -19,56 +20,59 @@
     }
 
     .background-image {
+      width: 100%;
+      height: auto;
+      display: block;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 100%;
-      height: auto;
-    }
-
-    .fade-top,
-    .fade-bottom {
-      position: absolute;
-      left: 0;
-      right: 0;
-      height: 15%;
-      pointer-events: none;
-      z-index: 1;
-    }
-
-    .fade-top {
-      top: 0;
-      background: linear-gradient(to bottom, black, transparent);
-    }
-
-    .fade-bottom {
-      bottom: 0;
-      background: linear-gradient(to top, black, transparent);
+      z-index: 0;
     }
 
     .link-text {
       position: absolute;
       left: 50%;
+      bottom: 25%;
       transform: translateX(-50%);
-      bottom: 10%;
-      z-index: 2;
+      z-index: 1;
       font-family: "Times New Roman", serif;
       font-size: 38px;
       color: white;
-      text-decoration: none;
+      text-decoration: underline;
       text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
+    }
+
+    footer {
+      position: absolute;
+      bottom: 5px;
+      width: 100%;
+      text-align: center;
+      font-size: 11px;
+      color: rgba(255, 255, 255, 0.5);
+      z-index: 2;
+    }
+
+    footer a {
+      color: rgba(255, 255, 255, 0.5);
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <img class="background-image" src="daligmunhalsa.jpeg" alt="Munbild">
-    <div class="fade-top"></div>
-    <div class="fade-bottom"></div>
+    <img class="background-image" src="dental-decay.jpg" alt="Dental decay">
     <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
       Hjälp mig ⭢
     </a>
+    <footer>
+      Bild: <a href="https://commons.wikimedia.org/wiki/File:Dental_decay.jpg" target="_blank">
+        Shaimaa Abdellatif
+      </a>, via Wikimedia Commons, licens: 
+      <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">
+        CC BY-SA 4.0
+      </a>.
+    </footer>
   </div>
 </body>
 </html>
