--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
   <div class="container">
-    <img class="background-image" src="dental-decay.jpg" alt="Dental decay">
+    <img class="background-image" src="munhalsa.png" alt="Dental decay">
     <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
       Hjälp mig ⭢
     </a>
