--- a/index.html
+++ b/index.html
@@ -2,77 +2,99 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Munhälsa</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       background-color: black;
-      height: 100%;
-      overflow: hidden;
+      font-family: "Times New Roman", serif;
     }
 
     .container {
       position: relative;
       width: 100%;
-      height: 100vh;
-      overflow: hidden;
+      max-width: 100vw;
     }
 
     .background-image {
       width: 100%;
       height: auto;
       display: block;
+    }
+
+    .fade-top,
+    .fade-bottom {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 0;
+      left: 0;
+      right: 0;
+      height: 20%;
+      pointer-events: none;
+      z-index: 1;
+    }
+
+    .fade-top {
+      top: 0;
+      background: linear-gradient(to bottom, black, transparent);
+    }
+
+    .fade-bottom {
+      bottom: 0;
+      background: linear-gradient(to top, black, transparent);
     }
 
     .link-text {
       position: absolute;
       left: 50%;
-      bottom: 25%;
+      bottom: 18%;
       transform: translateX(-50%);
-      z-index: 1;
-      font-family: "Times New Roman", serif;
-      font-size: 38px;
+      font-size: 5vw;
       color: white;
-      text-decoration: underline;
-      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
+      text-decoration: none !important;
+      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8);
+      z-index: 2;
     }
 
     footer {
-      position: absolute;
-      bottom: 5px;
-      width: 100%;
       text-align: center;
-      font-size: 11px;
+      font-size: 3vw;
       color: rgba(255, 255, 255, 0.5);
-      z-index: 2;
+      padding: 10px;
+      margin-top: 5px;
     }
 
     footer a {
       color: rgba(255, 255, 255, 0.5);
-      text-decoration: none;
+      text-decoration: underline;
+    }
+
+    @media (min-width: 768px) {
+      .link-text {
+        font-size: 32px;
+        bottom: 22%;
+      }
+
+      footer {
+        font-size: 12px;
+      }
     }
   </style>
 </head>
 <body>
   <div class="container">
     <img class="background-image" src="munhalsa.png" alt="Dental decay">
+    <div class="fade-top"></div>
+    <div class="fade-bottom"></div>
     <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
       Hjälp mig ⭢
     </a>
-    <footer>
-      Bild: <a href="https://commons.wikimedia.org/wiki/File:Dental_decay.jpg" target="_blank">
-        Shaimaa Abdellatif
-      </a>, via Wikimedia Commons, licens: 
-      <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">
-        CC BY-SA 4.0
-      </a>.
-    </footer>
   </div>
+
+  <footer>
+    Bild: <a href="https://commons.wikimedia.org/wiki/File:Dental_decay.jpg" target="_blank">Shaimaa Abdellatif</a>,
+    via Wikimedia Commons, licens:
+    <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>.
+  </footer>
 </body>
 </html>
