--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       padding: 0;
       background-color: black;
       font-family: "Times New Roman", serif;
+      width: 100%;
     }
 
     .container {
@@ -58,26 +59,14 @@
 
     footer {
       text-align: center;
-      font-size: 3vw;
+      font-size: 3.5vw;
       color: rgba(255, 255, 255, 0.5);
       padding: 10px;
-      margin-top: 5px;
     }
 
     footer a {
       color: rgba(255, 255, 255, 0.5);
       text-decoration: underline;
-    }
-
-    @media (min-width: 768px) {
-      .link-text {
-        font-size: 32px;
-        bottom: 22%;
-      }
-
-      footer {
-        font-size: 12px;
-      }
     }
   </style>
 </head>
