--- a/index.html
+++ b/index.html
@@ -11,21 +11,43 @@
       background-color: black;
       font-family: "Times New Roman", serif;
       height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+      width: 100vw;
+      overflow: hidden;
     }
 
     .container {
       position: relative;
       width: 100%;
-      flex: 1 0 auto;
+      height: 100%;
     }
 
     .background-image {
+      position: absolute;
+      top: 50%;
+      left: 50%;
       width: 100%;
       height: auto;
-      display: block;
+      transform: translate(-50%, -50%);
+      z-index: 0;
+    }
+
+    .link-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 5vw;
+      color: white;
+      text-decoration: none !important;
+      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8);
+      z-index: 2;
+    }
+
+    a.link-text:link,
+    a.link-text:visited,
+    a.link-text:hover,
+    a.link-text:active {
+      text-decoration: none !important;
     }
 
     .fade-top,
@@ -48,24 +70,15 @@
       background: linear-gradient(to top, black, transparent);
     }
 
-    .link-text {
-      position: absolute;
-      left: 50%;
-      bottom: 18%;
-      transform: translateX(-50%);
-      font-size: 5vw;
-      color: white;
-      text-decoration: none !important;
-      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8);
-      z-index: 2;
-    }
-
     footer {
-      flex-shrink: 0;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
       text-align: center;
       font-size: 3.5vw;
       color: rgba(255, 255, 255, 0.5);
       padding: 10px;
+      z-index: 2;
     }
 
     footer a {
@@ -82,12 +95,11 @@
     <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
       Hjälp mig ⭢
     </a>
+    <footer>
+      Bild: <a href="https://commons.wikimedia.org/wiki/File:Dental_decay.jpg" target="_blank">Shaimaa Abdellatif</a>,
+      via Wikimedia Commons, licens:
+      <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>.
+    </footer>
   </div>
-
-  <footer>
-    Bild: <a href="https://commons.wikimedia.org/wiki/File:Dental_decay.jpg" target="_blank">Shaimaa Abdellatif</a>,
-    via Wikimedia Commons, licens:
-    <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>.
-  </footer>
 </body>
 </html>
