--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
       font-family: "Times New Roman", serif;
       height: 100vh;
       width: 100vw;
-      overflow: hidden;
+      overflow-y: auto;
     }
 
     .container {
       position: relative;
       width: 100%;
       height: 100%;
+      min-height: 100vh;
     }
 
     .background-image {
@@ -95,6 +96,8 @@
     <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
       Hjälp mig ⭢
     </a>
+    </div>
+
     <footer>
       Bild: <a href="https://commons.wikimedia.org/wiki/File:Dental_decay.jpg" target="_blank">Shaimaa Abdellatif</a>,
       via Wikimedia Commons, licens:
