--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Munhälsa</title>
   <style>
     html, body {
@@ -10,45 +10,26 @@
       padding: 0;
       background-color: black;
       font-family: "Times New Roman", serif;
-      height: 100vh;
-      width: 100vw;
       overflow-y: auto;
     }
 
     .container {
+      width: 100%;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .image-wrapper {
       position: relative;
       width: 100%;
-      height: 100%;
-      min-height: 100vh;
+      max-width: 100vw;
     }
 
     .background-image {
-      position: absolute;
-      top: 50%;
-      left: 50%;
       width: 100%;
-      height: auto;
-      transform: translate(-50%, -50%);
-      z-index: 0;
-    }
-
-    .link-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 5vw;
-      color: white;
-      text-decoration: none !important;
-      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8);
-      z-index: 2;
-    }
-
-    a.link-text:link,
-    a.link-text:visited,
-    a.link-text:hover,
-    a.link-text:active {
-      text-decoration: none !important;
+      display: block;
     }
 
     .fade-top,
@@ -58,7 +39,7 @@
       right: 0;
       height: 20%;
       pointer-events: none;
-      z-index: 3;
+      z-index: 2;
     }
 
     .fade-top {
@@ -71,15 +52,31 @@
       background: linear-gradient(to top, black, transparent);
     }
 
-    footer {
+    .link-text {
       position: absolute;
-      bottom: 0;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 5vw;
+      color: white;
+      text-decoration: none !important;
+      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8);
+      z-index: 3;
+    }
+
+    a.link-text:link,
+    a.link-text:visited,
+    a.link-text:hover,
+    a.link-text:active {
+      text-decoration: none !important;
+    }
+
+    footer {
       width: 100%;
       text-align: center;
       font-size: 2.8vw;
       color: rgba(255, 255, 255, 0.5);
-      padding: 10px;
-      z-index: 2;
+      padding: 15px;
     }
 
     footer a {
@@ -90,19 +87,20 @@
 </head>
 <body>
   <div class="container">
-    <img class="background-image" src="munhalsa.png" alt="Dental decay">
-    <div class="fade-top"></div>
-    <div class="fade-bottom"></div>
-    <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
-      Hjälp mig ⭢
-    </a>
+    <div class="image-wrapper">
+      <img class="background-image" src="munhalsa.png" alt="Dental decay" />
+      <div class="fade-top"></div>
+      <div class="fade-bottom"></div>
+      <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/">
+        Hjälp mig ⭢
+      </a>
     </div>
-
-    <footer>
-      Bild: <a href="https://commons.wikimedia.org/wiki/File:Dental_decay.jpg" target="_blank">Shaimaa Abdellatif</a>,
-      via Wikimedia Commons, licens:
-      <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>.
-    </footer>
   </div>
+
+  <footer>
+    Bild: <a href="https://commons.wikimedia.org/wiki/File:Dental_decay.jpg" target="_blank">Shaimaa Abdellatif</a>,
+    via Wikimedia Commons, licens:
+    <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>.
+  </footer>
 </body>
 </html>
