--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       min-height: 100vh;
       display: flex;
       flex-direction: column;
+      justify-content: center;
       align-items: center;
     }
 
@@ -74,7 +75,7 @@
     footer {
       width: 100%;
       text-align: center;
-      font-size: 2.8vw;
+      font-size: clamp(10px, 2.2vw, 14px);
       color: rgba(255, 255, 255, 0.5);
       padding: 15px;
     }
