--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
 
     footer {
       width: 100%;
+      max-width: 90%;
+      margin: 0 auto;
       text-align: center;
-      font-size: clamp(10px, 2.2vw, 14px);
+      font-size: clamp(10px, 1.8vw, 12px);
       color: rgba(255, 255, 255, 0.5);
       padding: 15px;
     }
