--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 
     .fade-top {
       top: 0;
-      background: linear-gradient(to bottom, black, transparent);
+      background: linear-gradient(to top, transparent, black);
     }
 
     .fade-bottom {
       bottom: 0;
-      background: linear-gradient(to top, black, transparent);
+      background: linear-gradient(to bottom, transparent, black);
     }
 
     .link-text {
