--- a/index.html
+++ b/index.html
@@ -26,31 +26,37 @@
       position: relative;
       width: 100%;
       max-width: 100vw;
+      overflow: visible;
     }
 
     .background-image {
       width: 100%;
       display: block;
-    }
-
-    .fade-top,
-    .fade-bottom {
-      position: absolute;
-      left: 0;
-      right: 0;
-      height: 20%;
-      pointer-events: none;
+      position: relative;
       z-index: 2;
     }
 
-    .fade-top {
-      top: 0;
-      background: linear-gradient(to top, transparent, black);
+    /* Överlägg för att bildens färger ska "blöda utåt" */
+    .image-wrapper::before {
+      content: "";
+      position: absolute;
+      top: -20%;
+      left: 0;
+      width: 100%;
+      height: 20%;
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+      z-index: 1;
     }
 
-    .fade-bottom {
-      bottom: 0;
-      background: linear-gradient(to bottom, transparent, black);
+    .image-wrapper::after {
+      content: "";
+      position: absolute;
+      bottom: -20%;
+      left: 0;
+      width: 100%;
+      height: 20%;
+      background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+      z-index: 1;
     }
 
     .link-text {
@@ -92,11 +98,9 @@
   <div class="container">
     <div class="image-wrapper">
       <img class="background-image" src="munhalsa.png" alt="Dental decay" />
-      <div class="fade-top"></div>
-      <div class="fade-bottom"></div>
       <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/oversikt/">
-  Hjälp mig ⭢
-</a>
+        Hjälp mig ⭢
+      </a>
     </div>
   </div>
 
