--- a/index.html
+++ b/index.html
@@ -36,27 +36,28 @@
       z-index: 2;
     }
 
-    /* Överlägg för att bildens färger ska "blöda utåt" */
+    /* Blödande topgradient */
     .image-wrapper::before {
       content: "";
       position: absolute;
-      top: -20%;
+      top: 0;
       left: 0;
       width: 100%;
-      height: 20%;
-      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-      z-index: 1;
+      height: 15%;
+      background: linear-gradient(to bottom, black, transparent);
+      z-index: 3;
     }
 
+    /* Blödande bottengradient */
     .image-wrapper::after {
       content: "";
       position: absolute;
-      bottom: -20%;
+      bottom: 0;
       left: 0;
       width: 100%;
-      height: 20%;
-      background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-      z-index: 1;
+      height: 15%;
+      background: linear-gradient(to top, black, transparent);
+      z-index: 3;
     }
 
     .link-text {
@@ -66,16 +67,9 @@
       transform: translate(-50%, -50%);
       font-size: 5vw;
       color: white;
-      text-decoration: none !important;
+      text-decoration: none;
       text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8);
-      z-index: 3;
-    }
-
-    a.link-text:link,
-    a.link-text:visited,
-    a.link-text:hover,
-    a.link-text:active {
-      text-decoration: none !important;
+      z-index: 4;
     }
 
     footer {
@@ -99,7 +93,7 @@
     <div class="image-wrapper">
       <img class="background-image" src="munhalsa.png" alt="Dental decay" />
       <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/oversikt/">
-        Hjälp mig ⭢
+        Hjälp mig ⬢
       </a>
     </div>
   </div>
