--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="image-wrapper">
       <img class="background-image" src="munhalsa.png" alt="Dental decay" />
       <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/oversikt/">
-        Hjälp mig ⬢
+        Hjälp mig ⭢
       </a>
     </div>
   </div>
