--- a/index.html
+++ b/index.html
@@ -36,28 +36,29 @@
       z-index: 2;
     }
 
-   .image-wrapper::before {
-  content: "";
-  position: absolute;
-  top: -15%;
-  left: 0;
-  width: 100%;
-  height: 15%;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0), black);
-  z-index: 1;
-}
+    /* Top-fade som tonar ut BILDEN uppåt */
+    .image-wrapper::before {
+      content: "";
+      position: absolute;
+      top: -15%;
+      left: 0;
+      width: 100%;
+      height: 15%;
+      background: linear-gradient(to top, transparent, black);
+      z-index: 1;
+    }
 
-.image-wrapper::after {
-  content: "";
-  position: absolute;
-  bottom: -15%;
-  left: 0;
-  width: 100%;
-  height: 15%;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), black);
-  z-index: 1;
-}
-
+    /* Bottom-fade som tonar ut BILDEN nedåt */
+    .image-wrapper::after {
+      content: "";
+      position: absolute;
+      bottom: -15%;
+      left: 0;
+      width: 100%;
+      height: 15%;
+      background: linear-gradient(to bottom, transparent, black);
+      z-index: 1;
+    }
 
     .link-text {
       position: absolute;
@@ -68,7 +69,7 @@
       color: white;
       text-decoration: none;
       text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8);
-      z-index: 4;
+      z-index: 3;
     }
 
     footer {
