--- a/index.html
+++ b/index.html
@@ -23,10 +23,33 @@
     }
 
     .image-wrapper {
+      position: relative;
       width: 100%;
       max-width: 100vw;
-      overflow: hidden;
-      position: relative;
+      overflow: visible;
+    }
+
+    .mirror-image {
+      width: 100%;
+      height: auto;
+      display: block;
+      filter: blur(20px);
+      opacity: 0.4;
+      transform: scaleY(-1);
+    }
+
+    .mirror-top {
+      position: absolute;
+      top: -20%;
+      left: 0;
+      z-index: 1;
+    }
+
+    .mirror-bottom {
+      position: absolute;
+      bottom: -20%;
+      left: 0;
+      z-index: 1;
     }
 
     .background-image {
@@ -34,22 +57,6 @@
       display: block;
       position: relative;
       z-index: 2;
-
-      /* Här sker magin: bilden maskas så att den tonar i topp och botten */
-      -webkit-mask-image: linear-gradient(to bottom,
-        transparent 0%,
-        black 15%,
-        black 85%,
-        transparent 100%);
-      mask-image: linear-gradient(to bottom,
-        transparent 0%,
-        black 15%,
-        black 85%,
-        transparent 100%);
-      -webkit-mask-size: 100% 100%;
-      mask-size: 100% 100%;
-      -webkit-mask-repeat: no-repeat;
-      mask-repeat: no-repeat;
     }
 
     .link-text {
@@ -83,9 +90,11 @@
 <body>
   <div class="container">
     <div class="image-wrapper">
+      <img class="mirror-image mirror-top" src="munhalsa.png" alt="" />
       <img class="background-image" src="munhalsa.png" alt="Dental decay" />
+      <img class="mirror-image mirror-bottom" src="munhalsa.png" alt="" />
       <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/oversikt/">
-        Hjälp mig ⭢
+        Hjälp mig ⬢
       </a>
     </div>
   </div>
