--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     html, body {
       margin: 0;
       padding: 0;
-      background-color: black;
+      background: black;
       font-family: "Times New Roman", serif;
       overflow-y: auto;
     }
@@ -27,6 +27,7 @@
       width: 100%;
       max-width: 100vw;
       overflow: visible;
+      background: linear-gradient(to bottom, #1a1a1a 0%, black 100%); /* justerad bakgrund */
     }
 
     .mirror-image {
@@ -94,7 +95,7 @@
       <img class="background-image" src="munhalsa.png" alt="Dental decay" />
       <img class="mirror-image mirror-bottom" src="munhalsa.png" alt="" />
       <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/oversikt/">
-        Hjälp mig ⬢
+        Hjälp mig ⭢
       </a>
     </div>
   </div>
