--- a/index.html
+++ b/index.html
@@ -10,54 +10,47 @@
       padding: 0;
       background-color: black;
       font-family: "Times New Roman", serif;
-      overflow-y: auto;
+      overflow-x: hidden;
     }
 
     .container {
-      width: 100%;
-      min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      min-height: 100vh;
+      width: 100%;
     }
 
     .image-wrapper {
       position: relative;
       width: 100%;
-      max-width: 100vw;
       overflow: visible;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    .background-image {
-      width: 100%;
-      display: block;
-      position: relative;
-      z-index: 2;
-    }
-
-    /* Övre gradient (kan justeras om annan ton önskas) */
-    .image-wrapper::before {
-      content: "";
+    .background-blur {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      height: 20%;
-      background: linear-gradient(to top, #3d1f20, black);
-      z-index: 3;
+      height: 120%;
+      background-image: url("munhalsa.png");
+      background-size: cover;
+      background-position: center;
+      filter: blur(40px);
+      z-index: 1;
+      opacity: 0.4;
     }
 
-    /* Nedre gradient som matchar bildens nedre färg */
-    .image-wrapper::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 20%;
-      background: linear-gradient(to bottom, #3d1f20, black);
-      z-index: 3;
+    .background-image {
+      position: relative;
+      z-index: 2;
+      width: auto;
+      max-width: 100%;
+      height: auto;
+      display: block;
     }
 
     .link-text {
@@ -69,7 +62,7 @@
       color: white;
       text-decoration: none;
       text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8);
-      z-index: 4;
+      z-index: 3;
     }
 
     footer {
@@ -91,6 +84,7 @@
 <body>
   <div class="container">
     <div class="image-wrapper">
+      <div class="background-blur"></div>
       <img class="background-image" src="munhalsa.png" alt="Dental decay" />
       <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/oversikt/">
         Hjälp mig ⭢
