--- a/index.html
+++ b/index.html
@@ -10,47 +10,46 @@
       padding: 0;
       background-color: black;
       font-family: "Times New Roman", serif;
-      overflow-x: hidden;
+      overflow-y: auto;
     }
 
     .container {
+      width: 100%;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-      width: 100%;
-    }
-
-    .image-wrapper {
-      position: relative;
-      width: 100%;
-      overflow: visible;
-      display: flex;
       justify-content: center;
       align-items: center;
     }
 
-    .background-blur {
-      position: absolute;
-      top: 0;
-      left: 0;
+    .image-wrapper {
       width: 100%;
-      height: 120%;
-      background-image: url("munhalsa.png");
-      background-size: cover;
-      background-position: center;
-      filter: blur(40px);
-      z-index: 1;
-      opacity: 0.4;
+      max-width: 100vw;
+      overflow: hidden;
+      position: relative;
     }
 
     .background-image {
+      width: 100%;
+      display: block;
       position: relative;
       z-index: 2;
-      width: auto;
-      max-width: 100%;
-      height: auto;
-      display: block;
+
+      /* Här sker magin: bilden maskas så att den tonar i topp och botten */
+      -webkit-mask-image: linear-gradient(to bottom,
+        transparent 0%,
+        black 15%,
+        black 85%,
+        transparent 100%);
+      mask-image: linear-gradient(to bottom,
+        transparent 0%,
+        black 15%,
+        black 85%,
+        transparent 100%);
+      -webkit-mask-size: 100% 100%;
+      mask-size: 100% 100%;
+      -webkit-mask-repeat: no-repeat;
+      mask-repeat: no-repeat;
     }
 
     .link-text {
@@ -84,7 +83,6 @@
 <body>
   <div class="container">
     <div class="image-wrapper">
-      <div class="background-blur"></div>
       <img class="background-image" src="munhalsa.png" alt="Dental decay" />
       <a class="link-text" href="https://www.vardhandboken.se/vard-och-behandling/basal-och-preventiv-omvardnad/munhalsa/oversikt/">
         Hjälp mig ⭢
